--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroui/button": "2.2.30",
+    "@heroui/button": "^2.2.30",
+    "@heroui/card": "^2.2.27",
     "@heroui/code": "2.2.23",
     "@heroui/dropdown": "2.3.30",
+    "@heroui/image": "^2.2.19",
     "@heroui/input": "2.4.31",
     "@heroui/kbd": "2.2.24",
     "@heroui/link": "2.2.25",
