--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroui/button": "^2.2.30",
     "@heroui/card": "^2.2.27",
+    "@heroui/chip": "^2.2.24",
     "@heroui/code": "2.2.23",
     "@heroui/dropdown": "2.3.30",
     "@heroui/image": "^2.2.19",
