--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@heroui/card": "^2.2.27",
     "@heroui/chip": "^2.2.24",
     "@heroui/code": "2.2.23",
+    "@heroui/date-input": "^2.3.31",
     "@heroui/dropdown": "2.3.30",
     "@heroui/image": "^2.2.19",
     "@heroui/input": "2.4.31",
     "@heroui/kbd": "2.2.24",
     "@heroui/link": "2.2.25",
+    "@heroui/modal": "^2.2.28",
     "@heroui/navbar": "2.2.28",
     "@heroui/snippet": "2.2.31",
     "@heroui/switch": "2.2.26",
