--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroui/accordion": "^2.2.28",
     "@heroui/button": "^2.2.30",
     "@heroui/card": "^2.2.27",
     "@heroui/chip": "^2.2.24",
