--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@heroui/use-theme": "2.1.10",
     "@react-aria/visually-hidden": "3.8.29",
     "@react-types/shared": "3.32.1",
+    "@supabase/supabase-js": "^2.97.0",
     "@tailwindcss/postcss": "4.1.11",
     "@tailwindcss/vite": "4.1.11",
     "clsx": "2.1.1",
